fixade lite i text

--- a/Exercises/ai25_exercises.0/exr0_count_with_python.ipynb
+++ b/Exercises/ai25_exercises.0/exr0_count_with_python.ipynb
@@ -5,10 +5,12 @@
    "id": "61a9060b",
    "metadata": {},
    "source": [
-    "# 1. Pythagoras sats\n",
-    "-a) räkna ut hypotenusan av en rätvnklig triangel. Ena kateten a = 3 och b = 4 l.e.\n",
     "\n",
-    "-b) en rätvnklig triangel har hypotenusan = 7.0 och kateten a = 5.0 l.e. Beräkna längden på katet b. En decimals noggranhet.\n"
+    "# 1. Pythagoras sats\n",
+    "\n",
+    " - a) räkna ut hypotenusan av en rätvinklig triangel. Ena kateten a = 3 och b = 4 l.e.\n",
+    "\n",
+    "- b) en rätvinklig triangel har hypotenusan = 7.0 och kateten a = 5.0 l.e. Beräkna längden på katet b. En decimals noggranhet.\n"
    ]
   },
   {
@@ -16,7 +18,8 @@
    "id": "299337d0",
    "metadata": {},
    "source": [
-    "### Uppgigft a\n"
+    "\n",
+    "##### Uppgigft a\n"
    ]
   },
   {
@@ -50,7 +53,8 @@
    "id": "ba554ab0",
    "metadata": {},
    "source": [
-    "### Uppgift b"
+    "\n",
+    "##### Uppgift b"
    ]
   },
   {
@@ -80,8 +84,9 @@
    "id": "88e8e3d6",
    "metadata": {},
    "source": [
+    "\n",
     "# 2. Classification accuracy\n",
-    "- en maskininlärnings algorytmen har lärt sig förutspå vädret. Av 365 dagar får det 300 korrekta utfall. Beräkna modellens noggranhet.\n"
+    "- en maskininlärnings algoritm har lärt sig förutspå vädret. Av 365 dagar får det 300 korrekta utfall. Beräkna modellens noggranhet.\n"
    ]
   },
   {
@@ -112,7 +117,9 @@
    "id": "d248da34",
    "metadata": {},
    "source": [
+    "\n",
     "# 3. Classification accuracy\n",
+    "\n",
     "- en maskininlärnings modell har tränats att upptäcka bränder.\n"
    ]
   },
@@ -132,10 +139,10 @@
     {
      "data": {
       "text/plain": [
-       "' Nej, det är ingen bra modell.\\n\\nantalet verkliga bränder är totalt 13 st men man missar 11 av dem, vilket hög % av felberäking.'"
+       "'Nej, det är ingen bra modell.\\nantalet verkliga bränder är totalt 13 st men man missar 11 av dem, vilket hög % av felberäking.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +159,7 @@
     "accuracy = round(accuracy*100,2)\n",
     "print(f\"Modellens noggrannhet att upptäcka en brand är på {accuracy} %.\")\n",
     "\n",
-    "''' Nej, det är ingen bra modell.\n",
+    "'''Nej, det är ingen bra modell.\n",
     "antalet verkliga bränder är totalt 13 st men man missar 11 av dem, vilket hög % av felberäking.'''"
    ]
   },
@@ -161,8 +168,11 @@
    "id": "501e68da",
    "metadata": {},
    "source": [
+    "\n",
     "# 4. Line\n",
-    "- beräkna linjens lutningen av k och den konstanta värdet m med hjälp av punkterna A: (4,4) och B:(0:1)"
+    "\n",
+    "- beräkna linjens lutningen av k och den konstanta värdet m ($y = kx + m$) med hjälp av punkterna A: (4,4) och B:(0,1)\n",
+    "    $$y = kx +m$$"
    ]
   },
   {
@@ -202,6 +212,7 @@
    "id": "794f9022",
    "metadata": {},
    "source": [
+    "\n",
     "# 5. Euclidean distance\n"
    ]
   },
@@ -236,6 +247,7 @@
    "id": "db789fd0",
    "metadata": {},
    "source": [
+    "\n",
     "# 6. Euclidean distance 3-D"
    ]
   },
