--- a/Exercises/ai25_exercises.0/exr0_count_with_python.ipynb
+++ b/Exercises/ai25_exercises.0/exr0_count_with_python.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "\n",
     "# 2. Classification accuracy\n",
-    "- en maskininlärnings algoritm har lärt sig förutspå vädret. Av 365 dagar får det 300 korrekta utfall. Beräkna modellens noggranhet.\n"
+    "- en maskininlärnings algoritm har lärt sig förutspå vädret. Av 365 dagar får det 300 korrekta utfall. Beräkna modellens noggrannhet.\n"
    ]
   },
   {
